# Notify

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: 01-dependencies.yaml  01-workflow-events.yaml  02-linting-test.yaml.yml  03-build-artifacts.yaml.yml
alembic/: env.py
alembic/versions/: 667647f8fcaa_initial.py
app/: main.py  worker.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  notifications.py  subscriptions.py  users.py  webhooks.py
app/core/: __init__.py  authentication.py  celery_config.py  config.py  exceptions.py  lifespan.py  logging.py  mail_config.py  rate_limit.py
app/db/: session.py
app/models/: __init__.py  base.py  notifications.py  subscriptions.py  users.py
app/schemas/: notifications.py  subscriptions.py  users.py
app/services/: notification_service.py  subscription_service.py  user_service.py
app/tasks/: billing_tasks.py  email_tasks.py  log_tasks.py  sms_tasks.py
app/templates/email/: account_created.html  account_deleted.html  base.html  password_reset.html  payment_failed.html  payment_succeeded.html  subscription_canceled.html  subscription_created.html  subscription_renewed.html
scripts/: create_superuser.py  seed_db.py  sync_stripe_plans.py
tests/: conftest.py
tests/integration/: test_auth.py  test_notifications.py  test_subscriptions.py
tests/unit/: test_auth.py  test_health.py  test_rate_limit.py  test_user_service.py  test_users.py
