[project]
name = "notify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.6.10",
    "celery[redis]>=5.6.3",
    "fastapi-mail>=1.6.2",
    "fastapi[standard]>=0.135.3",
    "limits>=5.8.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "pytest-asyncio>=1.3.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.49",
    "stripe>=15.0.1",
    "structlog>=25.5.0",
    "twilio>=9.10.5",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.11",
]
